sandc/test/fixtures/astRegression/shouldFail/productions/ifPseudex/EmptyElseIfBlock.sand
pub class EmptyElseIfBlock {
    foo() {
        let a = if cond {
            b
        } else if cond {
            
        } else {
            b
        };
    }
}